--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,10 @@ a {
 }
 
 body {
-  min-width: 1200px;
   margin: 0;
   padding: 0;
   font-family: "Roboto", "Arial", sans-serif;
+  overflow-x: hidden;
 }
 
 .visually-hidden {
