--- a/css/style.css
+++ b/css/style.css
@@ -411,6 +411,7 @@ input[name="slider-toggle"] {
 
 .office-phone__link {
   color: #ffffff;
+  text-decoration: none;
 }
 
 .slider {
@@ -527,7 +528,7 @@ input[name="slider-toggle"] {
 }
 
 .goods {
-  margin-bottom: 47px;
+  margin-bottom: 44px;
 }
 
 .popular-goods__list,
@@ -842,6 +843,7 @@ input[name="slider-toggle"] {
 }
 
 .contacts-info__link {
+  text-decoration: none;
   color: #323232;
 }
 
@@ -1161,7 +1163,7 @@ input[name="slider-toggle"] {
 }
 
 .filter {
-  margin-bottom: 32px;
+  margin-bottom: 35px;
 }
 
 .filter__row {
@@ -1252,16 +1254,16 @@ input[name="slider-toggle"] {
   left: 98px;
 }
 
-
 .filter input[type="radio"],
 .filter input[type="checkbox"] {
   display: none;
 }
 
-.filter label {
+.fatness label {
   position: relative;
   margin-right: 15px;
   padding-left: 35px;
+  cursor: pointer;
 }
 
 .fatness-wrapper {
@@ -1278,16 +1280,25 @@ input[name="slider-toggle"] {
   margin-right: 0;
 }
 
+.filter__row--top {
+  margin-bottom: 13px;
+}
+
 .filler-wrapper {
+  display: flex;
+  justify-content: space-between;
   padding-top: 8px;
   padding-bottom: 8px;
-  padding-left: 12px;
+  padding-left: 14px;
+  padding-right: 20px;
   border-radius: 16px;
   background-color: rgba(248, 247, 244, 0.2);
 }
 
-.fatness label,
 .filler label {
+  position: relative;
+  margin-right: 20px;
+  padding-left: 30px;
   cursor: pointer;
 }
 
@@ -1326,8 +1337,21 @@ input[name="slider-toggle"] {
   background-size: 24px 20px;
 }
 
-.filler {
-  margin-top: 14px;
+.filler .sugar {
+  margin-right: 25px;
+}
+
+.filler .fruit {
+  margin-right: 25px;
+}
+
+.filler .syrup {
+  margin-right: 22px;
+}
+
+.filler .jam {
+  padding-left: 33px;
+  margin-right: 0;
 }
 
 .filter-button {
