--- a/css/style.css
+++ b/css/style.css
@@ -1211,6 +1211,10 @@ input[name="slider-toggle"] {
   appearance: none;
 }
 
+.sort-select::-ms-expand {
+  display: none;
+}
+
 .range-controls {
   margin-right: 10px;
   padding-top: 16px;
